--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react-nice-calendar": "^0.1.6"
   },
   "devDependencies": {
+    "@types/node": "20.8.0",
+    "@types/react": "18.2.24",
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "postcss-nested": "^6.0.1"
+    "postcss-nested": "^6.0.1",
+    "typescript": "5.2.2"
   }
 }
